fixed spacing for desktop navigation

--- a/src/App.css
+++ b/src/App.css
@@ -656,7 +656,7 @@ h2 {
   #portfolio {
     width: 100%;
     margin: auto;
-    min-height: 1568px;
+    min-height: 1728px;
     background-color: var(--dark);
   }
 
